# KISS-multiplayer

./: .editorconfig  .gitignore  Cargo.toml  README.md  install_beamng_mod.sh
.github/workflows/: rust.yml
KISSMultiplayer/art/shapes/kissmp_playermodels/: base_nb.dae  base_nb_head.dae  main.materials.json
KISSMultiplayer/lua/ge/extensions/: kissconfig.lua  kissmods.lua  kissplayers.lua  kissrichpresence.lua  kisstransform.lua  kissui.lua  kissutils.lua  kissvoicechat.lua  network.lua  vehiclemanager.lua
KISSMultiplayer/lua/ge/extensions/core/input/actions/: kissmp.json
KISSMultiplayer/lua/ge/extensions/kissmp/: chat.lua  config.lua  install_check.lua  servers.lua  utils.lua  version.lua
KISSMultiplayer/lua/ge/extensions/kissmp/ui/: chat.lua  download.lua  draw_names.lua  global_inputs.lua  gui.lua  main.lua  names.lua
KISSMultiplayer/lua/ge/extensions/kissmp/ui/components/: blank.lua  chat.lua  direct_connect.lua  direct_favorite_add.lua  download.lua  servers.lua  settings.lua
KISSMultiplayer/lua/ge/extensions/kissmp/ui/tabs/: create_server.lua  direct_connect.lua  favorites.lua  history.lua  server_list.lua  settings.lua
KISSMultiplayer/lua/vehicle/extensions/kiss_mp/: kiss_couplers.lua  kiss_electrics.lua  kiss_gearbox.lua  kiss_input.lua  kiss_nodes.lua  kiss_powertrain.lua  kiss_transforms.lua  kiss_vehicle.lua
KISSMultiplayer/scripts/kiss_mp/: modScript.lua
docs/src/: SUMMARY.md  building.md  hosting.md  introduction.md
docs/src/srv_hosting/: hosting.md  mods_and_addons.md  troubleshooting.md
docs/src/srv_lua/: admin_system_example.md  connection.md  examples.md  global_functions.md  globals.md  hooks.md  lua_api.md  time_sync_example.md  transform.md  vehicle_data.md  vehicles.md
kissmp-bridge/: Cargo.toml
kissmp-bridge/src/: decoder.rs  discord.rs  encoder.rs  http_proxy.rs  main.rs  voice_chat.rs
kissmp-master/: Cargo.toml
kissmp-master/src/: main.rs
kissmp-server/: .gitignore  Cargo.toml  config.json
kissmp-server/addons/test/: main.lua
kissmp-server/src/: config.rs  electrics.rs  error.rs  events.rs  file_transfer.rs  gearbox.rs  incoming.rs  lib.rs  lua.rs  main.rs  nodes.rs  outgoing.rs  result.rs  server_vehicle.rs  transform.rs
kissmp-server/src/vehicle/: colors.rs  electrics.rs  gearbox.rs  mod.rs  transform.rs  vehicle_meta.rs
shared/: Cargo.toml
shared/src/: lib.rs  state.rs
shared/src/vehicle/: electrics.rs  gearbox.rs  mod.rs  transform.rs  vehicle_meta.rs
