[package]
name = "kissmp-bridge"
version = "0.1.0"
authors = ["hellbox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["discord-rpc-client"]

[dependencies]
futures = "0.3.5"
quinn = "0.6.1"
webpki = "0.21.0"
anyhow = "1.0.32"
reqwest = { version = "0.10.8", default-features = false, features=["rustls-tls"] }
tiny_http="0.6"
rustls = { version = "0.17.0", features = ["dangerous_configuration"] }
tokio = { version = "0.2.22", features = ["rt-threaded", "time", "macros", "stream", "sync", "io-util", "tcp"] }
discord-rpc-client = {version = "0.3", optional = true}
