[package]
name = "kissmp-bridge"
version = "0.4.5"
authors = ["hellbox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["discord-rpc-client"]

[dependencies]
shared = { path = "../shared" }
kissmp-server = { path = "../kissmp-server" }
bincode = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
futures = "0.3.5"
quinn = "0.7.1"
webpki = "0.21.0"
anyhow = "1.0.32"
reqwest = { version = "0.11.0", default-features = false, features=["rustls-tls"] }
tiny_http="0.6"
tokio-stream="0.1.5"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
tokio = { version = "1.4", features = ["time", "macros", "sync", "io-util", "net"] }
discord-rpc-client = {version = "0.3", optional = true}
percent-encoding = "2.1.0"
audiopus = "0.2"
rodio = "0.13.1"
cpal = "0.13"
fon = "0.5.0"
log = "0.4"
indoc = "1.0"