[package]
name = "kissmp-bridge"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["discord-rpc-client"]

[dependencies]
shared = { path = "../shared" }
kissmp-server = { path = "../kissmp-server" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
futures = "0.3.5"
quinn = {version="0.8.5", features = ["tls-rustls"]}
rustls = { version = "0.20.3", features = ["dangerous_configuration"] }
# Held back due to rustls using webpki 0.21
webpki = "0.21"
anyhow = "1.0.32"
reqwest = { version = "0.11", default-features = false, features=["rustls-tls"] }
tiny_http="0.8"
tokio-stream="0.1.5"
tokio = { version = "1.4", features = ["time", "macros", "sync", "io-util", "net"] }
discord-rpc-client = {version = "0.4", optional = true}
percent-encoding = "2.1"
audiopus = "0.2"
rodio = "0.14"
cpal = "0.13"
fon = "0.5.0"
log = "0.4"
indoc = "1.0"
rcgen = "0.8.2"
