[package]
name = "kissmp-master"
version = "0.2.0"
authors = ["TheHellBox <thehellbox11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.6"
serde_json="1.0"
censor = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
