[package]
name = "kissmp-master"
version = "0.5.0"
authors = ["TheHellBox <thehellbox11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
#tide = "0.15.0"
warp = "0.3"
serde_json="1.0"
censor = "0.2"
tokio={version = "1.20", features = ["rt", "rt-multi-thread", "macros", "net"]}
#async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
