[package]
name = "kissmp-master"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
#tide = "0.15.0"
warp = "0.2"
serde_json="1.0"
censor = "0.1.1"
tokio={version = "0.2", features = ["rt-threaded", "macros", "net"]}
#async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
