[package]
name = "kissmp-server"
version = "0.6.0"
authors = ["hellbox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rand = "0.8"
serde_json="1.0"
bincode="1.3"
rmp="0.8"
rmp-serde="1.1"
futures = "0.3"
quinn = "0.8"
rustls = "0.20"
anyhow = "1.0"
rlua = "0.19"
notify = "4.0"
tokio-util = {version = "0.7", features = ["codec"]}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features=["rustls-tls"] }
rcgen = { version = "0.9", default-features = false }
tokio = { version = "1.4", features = ["rt-multi-thread", "time", "macros", "sync", "io-util", "io-std", "fs"] }
tokio-stream = "0.1"
dirs = "4.0"
igd = { git = "https://github.com/stevefan1999-personal/rust-igd.git", rev = "c2d1f83" }
ifcfg = "0.1"
async-ctrlc = "1.2"
log = "0.4"

[target.'cfg(unix)'.dependencies]
steamlocate = "1.0"
