[package]
name = "shared"
version = "0.1.0"
authors = ["TheHellBox <thehellbox11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
serde_json="1.0"
bincode="1.3.1"
rmp="0.8.9"
rmp-serde="0.14.4"
serde = { version = "1.0", features = ["derive"] }
