[package]
name = "shared"
version = "0.5.0"
authors = ["TheHellBox <thehellbox11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
serde_json="1.0"
bincode="1.3"
rmp="0.8"
rmp-serde="1.1"
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4"
chrono = "0.4"
log = "0.4"