[package]
name = "shared"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
serde_json="1.0"
bincode="1.3.1"
rmp="0.8.9"
rmp-serde="0.14.4"
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4"
chrono = "0.4"
log = "0.4"